# blvm-node

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  testnet-ibd-config.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  cleanup-runner-disk.yml  coverage.yml
docs/: AUDIT_SUPPRESSIONS.md  CONFIGURATION_GUIDE.md  HIGH_AVAILABILITY.md  INTEGRATION_GUIDE.md  MODULE_SYSTEM.md  NETWORK_VERIFICATION.md  QUIC_RPC.md  QUINN_INTEGRATION.md  README.md  RPC_REFERENCE.md  ZMQ_NOTIFICATIONS.md
examples/: README.md  electrum-integration.rs  rpc-batch.rs  rpc-mempool.rs
fuzz/: Cargo.toml
modules/: README.md
scripts/: smoke-bootstrap-official-modules.sh  test_ibd.sh  verify-published-modules.sh
src/: lib.rs
src/cli/: migrate.rs
src/config/: ibd.rs  mod.rs  rpc.rs  storage.rs
src/config/examples/: full.toml
src/module/: github_release_install.rs  manager.rs  mod.rs  traits.rs
src/module/api/: hub.rs  node_api.rs  node_api_ipc.rs
src/module/ipc/: client_windows.rs  protocol.rs  server.rs
src/module/loader/: loader.rs
src/module/process/: spawner.rs
src/module/registry/: discovery.rs  manifest.rs
src/module/sandbox/: process.rs
src/module/security/: permissions.rs  signing.rs  validator.rs
src/module/validation/: manifest_validator.rs
src/network/: background_tasks.rs  ban_list_signing.rs  bandwidth_protection.rs  bip70_handler.rs  connection_manager.rs  filter_service.rs  getdata_serve.rs  inventory.rs  lan_discovery.rs  lan_security.rs  mod.rs  network_manager.rs  network_message_dispatch.rs  peer_connections.rs  peer_manager.rs  peer_scoring.rs  protocol.rs  protocol_adapter.rs  protocol_extensions.rs  quinn_transport.rs  startup.rs  wire_dispatch.rs
src/network/handlers/: addr.rs
src/node/: background_validation.rs  block_processor.rs  event_publisher.rs  mempool.rs  miner.rs  mod.rs  parallel_ibd.rs  run_loop.rs  sync.rs
src/node/parallel_ibd/: checkpoints.rs  chunk_assigner.rs  download.rs  feeder.rs  ibd_staging.rs  memory.rs  mod.rs  prefetch.rs  retire_dispatcher.rs  types.rs  validation_loop.rs
src/payment/: processor.rs  state_machine.rs
src/rpc/: auth_impl.rs  blockchain.rs  control.rs  methods.rs  mining.rs  mod.rs  quinn_server.rs  rawtx.rs  server.rs
src/rpc/rest/: mempool.rs  payment.rs  server.rs  vault.rs
src/storage/: assumeutxo.rs  bitcoin_core_blocks.rs  bitcoin_core_migrate.rs  bitcoin_core_storage.rs  bitcoin_detection.rs  buffered_store.rs  chainstate.rs  disk_utxo.rs  ibd_autorepair.rs  ibd_utxo_muhash.rs  ibd_utxo_store.rs  mod.rs  pruning.rs  serialization_cache.rs  txindex.rs  utxostore.rs  wal.rs
src/storage/database/: mod.rs
src/storage/ibd_engine/: database.rs  disk_segment.rs  export.rs  file_io.rs  import.rs  index.rs  memory_age.rs  memory_run.rs  mod.rs  table.rs  types.rs
src/utils/: error.rs  mod.rs  ram_tier.rs  request_id.rs
tests/: async_routing_tests.rs  bip70_tests.rs  bitcoin_core_tests.rs  block_connection_tests.rs  block_processor_stress_tests.rs  compact_blocks_tests.rs  config_edge_cases_tests.rs  config_parsing_tests.rs  config_validate_security_tests.rs  event_publisher_comprehensive_tests.rs  fee_calculation_tests.rs  filter_service_tests.rs  ibd_snapshot_node_bench.rs  ibd_utxo_store_protection.rs  inspect_ibd_resume_datadir.rs  mempool_policy_tests.rs  mempool_tests.rs  metrics_collector_tests.rs  mining_coordinator_tests.rs  mining_property_tests.rs  mining_rpc_tests.rs  module_api_blockchain_tests.rs  module_api_hub_tests.rs  module_encryption_e2e_tests.rs  module_encryption_tests.rs  module_ipc_client_tests.rs  module_ipc_server_tests.rs  module_manager_tests.rs  module_manifest_validator_tests.rs  module_process_monitor_tests.rs  module_registry_encryption_tests.rs  module_registry_tests.rs  module_security_permissions_tests.rs  monitoring_profiling_comprehensive_tests.rs  network_ban_list_signing_tests.rs  network_bip70_handler_tests.rs  network_tests.rs  node_tests.rs  payment_config_tests.rs  payment_congestion_tests.rs  (+24 more)
tests/common/: mod.rs
tests/integration/: utxo_commitments_tests.rs
tools/: migrate-bitcoin-core.rs
