[package]
name = "blvm-node"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLVM: Minimal Bitcoin node implementation using blvm-protocol and blvm-consensus"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-node"
homepage = "https://btcdecoded.org"
documentation = "https://docs.rs/blvm-node"
keywords = ["bitcoin", "node", "blockchain", "cryptocurrency", "p2p"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.82"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("governance"))'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Protocol abstraction layer - Use local path for development
# This transitively provides blvm-consensus, so we only need this one dependency
# For local development, use path dependency
blvm-protocol = { path = "../blvm-protocol" }
# Direct dependency on blvm-consensus for CTV feature (CTV functions not re-exported by protocol)
blvm-consensus = { path = "../blvm-consensus", optional = true }

# Storage layer - EXACT VERSIONS for security
sled = { version = "=0.34.7", optional = true }
redb = { version = "=1.4", optional = true }
rocksdb = { version = "0.21", optional = true }

# Networking layer - EXACT VERSIONS for security
tokio = { version = "=1.48.0", features = ["full", "rt-multi-thread"] }  # Updated for iroh 0.95 compatibility (requires ^1.44.1)
tokio-util = { version = "=0.7.17", features = ["codec", "io"] }  # Updated for iroh 0.95 compatibility (requires ^0.7.14)
futures = "=0.3.31"  # Updated for iroh 0.95 compatibility (requires ^0.3.31)
# HTTP server - EXACT VERSIONS for security
http = "=1.1.0"
http-body-util = "=0.1.1"
hyper = { version = "=1.8.0", features = ["server", "http1", "http2"] }  # Updated for iroh 0.95 compatibility (hyper-util 0.1.18 requires ^1.8.0)
hyper-util = { version = "=0.1.18", features = ["server", "http1", "tokio"] }  # Updated for iroh 0.95 compatibility (requires ^0.1.11)

# Serialization - EXACT VERSIONS for security
serde = { version = "=1.0.228", features = ["derive"] }  # Updated for iroh 0.95 compatibility (requires ^1.0.219)
serde_json = "=1.0.108"
serde_bytes = "=0.11.19"  # Updated for iroh 0.95 compatibility (requires ^0.11.17)
bincode = "=1.3.3"
bytes = "=1.10.1"  # Updated for iroh 0.95 compatibility (requires ^1.7)
uuid = { version = "=1.6.0", features = ["v4"] }
toml = "=0.8.2"

# Cryptography - EXACT VERSIONS for security
secp256k1 = "=0.28.2"  # For BIP70 Bitcoin signature verification
sha2 = "=0.10.9"
ripemd = "=0.1.3"
hex = "=0.4.3"
siphasher = "=0.3"
zeroize = { version = "1.7", features = ["zeroize_derive"] }  # Secure secret handling

# Network utilities
local-ip-address = "0.6"  # For LAN peer discovery
constant_time_eq = "0.3"  # Constant-time comparison for token authentication
aes-gcm = "=0.10.3"  # Module encryption
hkdf = "=0.12.4"  # Key derivation for module encryption

# Random number generation for Dandelion++
rand = "=0.8.5"
# For iroh SecretKey generation in tests (avoids RNG version conflicts)
getrandom = "=0.2"
# Directory utilities for Bitcoin Core detection
dirs = "5.0"
# SmallVec for production optimizations
smallvec = { version = "1.11", optional = true, features = ["serde"] }

# Address encoding (BIP173/350/351)
bech32 = "=0.9"

# Error handling - EXACT VERSIONS for security
anyhow = "=1.0.93"
thiserror = "=1.0.69"

# Logging - EXACT VERSIONS for security
tracing = "=0.1.41"  # Updated for iroh 0.95 compatibility (requires ^0.1.41)
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }

# CLI - EXACT VERSIONS for security
clap = { version = "=4.4.11", features = ["derive"] }

# Async traits - for transport abstraction
async-trait = "=0.1.75"

# Bitflags for transport preference combinations
bitflags = "^2.6"

# Memory allocator optimization
# Disabled for Windows cross-compilation (mimalloc linking issues with MinGW)
[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc = { version = "=0.1", default-features = false }

# System calls for process sandboxing (Unix)
nix = { version = "0.28", features = ["process", "resource"], optional = true }
libc = { version = "0.2", optional = true }

# Parallel processing for block validation (Phase 4.2)
rayon = { version = "1.8", optional = true }

# LRU cache for production optimizations
lru = { version = "0.12", optional = true }

# System information for memory stats (optional feature)
sysinfo = { version = "0.30", optional = true }

# HTTP client for governance webhooks (optional feature)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Compression for storage optimization (optional feature)
zstd = { version = "0.13", optional = true }

# Erlay (BIP330) transaction relay optimization
# Note: minisketch-rs requires libclang/LLVM for bindgen compilation
# The erlay feature can be enabled without minisketch-rs, but functionality will be disabled
# To enable full Erlay functionality, also enable the minisketch-rs feature (requires libclang)
# DISABLED: minisketch-rs conflicts with rocksdb due to clang-sys version incompatibility
# Erlay is disabled by default - enable explicitly if needed (but not with rocksdb)
# To re-enable erlay: uncomment the line below and the erlay feature
# minisketch-rs = { version = "0.1.9", optional = true }

# FEC (Forward Error Correction) for FIBRE
reed-solomon-erasure = "=6.0.0"
# CRC32 for FIBRE packet checksums
crc32fast = "=1.3"

# ZeroMQ for notifications (optional feature)
zmq = { version = "0.10", optional = true }
# Miniscript support for script policy compilation and descriptor parsing (optional feature)
# Updated to 13.0.0 to use newer bitcoin crate with better secp256k1 compatibility
miniscript = { version = "13.0.0", optional = true }
# Base64 encoding/decoding for PSBT
base64 = { version = "0.22", optional = true }
# Regex for range descriptor detection
regex = { version = "1.10", optional = true }

# Iroh networking (optional feature)
# Updated to iroh 0.95 to fix security vulnerabilities in iroh-net 0.12
iroh = { version = "0.95", optional = true }
# Quinn QUIC transport (optional feature - can be used standalone)
# Note: quinn_transport.rs uses quinn directly (independent of iroh)
# iroh 0.95 wraps quinn internally via iroh-quinn, so quinn is not needed for iroh feature
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.12", optional = true }
# rustls version is determined by quinn 0.10 (uses rustls 0.21)
# Only specify if quinn feature is not enabled
rustls = { version = "0.21", optional = true }

# Security Note: Migrated from iroh-net 0.12 to iroh 0.95 to fix vulnerabilities:
# - idna 0.4.0 (RUSTSEC-2024-0421) - FIXED in iroh 0.95
# - ring 0.16.20 (RUSTSEC-2025-0009) - FIXED in iroh 0.95
# - rsa 0.9.8 (RUSTSEC-2023-0071) - FIXED in iroh 0.95
# - paste 1.0.15 (unmaintained) - FIXED in iroh 0.95
#
# iroh 0.95 uses actively maintained dependencies and fixes all known security issues.

[features]
default = ["sysinfo", "redb", "nix", "libc", "production", "governance", "zmq"]
# Note: rocksdb and erlay are mutually exclusive due to clang-sys version conflicts
# Note: utxo-commitments removed from default - it's experimental only
iroh = ["dep:iroh"]
quinn = ["dep:quinn", "dep:rcgen", "dep:rustls"]
utxo-commitments = ["blvm-protocol/utxo-commitments"]
stratum-v2 = []
# Block filtering (BIP158)
bip158 = []
# Signature operations counting
sigop = []
# FIBRE (Fast Internet Bitcoin Relay Engine) - requires bllvm-protocol with fibre module
fibre = []
# System information for memory stats
sysinfo = ["dep:sysinfo"]
# Storage backends
sled = ["dep:sled"]
redb = ["dep:redb"]
# Note: rocksdb and erlay are mutually exclusive due to clang-sys version conflicts
rocksdb = ["dep:rocksdb"]
# Process sandboxing (Unix)
nix = ["dep:nix", "dep:libc"]
libc = ["dep:libc"]
# Production optimizations (parallel block validation, etc.)
production = ["blvm-protocol/production", "dep:rayon", "dep:lru", "dep:blvm-consensus", "dep:smallvec"]
# Privacy relay (Dandelion++) compiled behind feature flag; default OFF
dandelion = []
# CTV (BIP119 CheckTemplateVerify) - passed through from blvm-protocol
ctv = ["blvm-protocol/ctv", "dep:blvm-consensus"]
# Governance webhook integration
governance = ["dep:reqwest"]
# ZeroMQ notification support
zmq = ["dep:zmq"]
# Memory allocator optimization (mimalloc) - faster than default allocator
# Disabled for Windows cross-compilation (mimalloc linking issues with MinGW)
mimalloc = []
# JSON logging format for structured logging (production/monitoring)
json-logging = []
# Modern REST API (runs alongside JSON-RPC)
rest-api = []
# HTTP BIP70 payment protocol support (requires rest-api)
bip70-http = ["rest-api"]
# Miniscript support for script policy compilation and descriptor parsing
# NOT in default - must be explicitly enabled
# Note: Updated to miniscript 13.0.0 which uses bitcoin 0.32.x with better secp256k1 compatibility
# The secp256k1 patch (below) ensures compatibility with iroh feature
miniscript = ["dep:miniscript", "dep:base64", "dep:regex"]

# Storage compression optimizations
block-compression = ["dep:zstd"]
utxo-compression = ["dep:zstd"]
witness-compression = ["dep:zstd"]
# All compression features
compression = ["block-compression", "utxo-compression", "witness-compression"]

# Erlay (BIP330) transaction relay optimization
# Note: Requires libclang/LLVM for minisketch-rs bindgen compilation
# Erlay is entirely optional - if libclang is not available, simply don't enable this feature
# For CI without libclang: omit the erlay feature entirely
# DISABLED: erlay conflicts with rocksdb due to clang-sys version conflicts
# To enable erlay, uncomment minisketch-rs dependency above and this feature
# erlay = ["dep:minisketch-rs"]


[dev-dependencies]
tempfile = "=3.8.1"
rand = "0.8"
cargo-tarpaulin = "0.27"
criterion = "0.5"
proptest = "1.4.0"
dhat = "0.3"  # Heap profiling
serial_test = "3.0"  # Sequential test execution for database isolation

# Release profile optimizations (mirrors bllvm-consensus)
[profile.release]
# Production optimizations (mirrors bllvm-consensus)
opt-level = 3
lto = "fat"  # Fat LTO for maximum optimization
codegen-units = 1  # Single codegen unit maximizes LTO benefits
strip = true  # Remove symbols for smaller binaries
panic = "abort"  # Smaller binaries, no unwinding overhead

[profile.release.package."*"]
opt-level = 3

# Benchmark profile
[profile.bench]
opt-level = 3
debug = false
strip = false
lto = "thin"
codegen-units = 16

# Benchmark targets
# Benchmarks have been moved to blvm-bench crate
# See: https://github.com/BTCDecoded/blvm-bench

# Local development: Use .cargo/config.toml to override dependencies with local paths
# This allows you to develop against local changes in blvm-protocol without publishing
# For CI jobs that checkout dependencies, .cargo/config.toml is created automatically

# IMPORTANT: rocksdb and erlay features are mutually exclusive
# Due to clang-sys version conflicts, you cannot enable both features simultaneously.
# To use rocksdb, you must exclude erlay from your build:
#   cargo build --features rocksdb --no-default-features
# Then manually add back other needed features (e.g., --features rocksdb,production)
# The build script (build.rs) will catch this conflict at build time.


# Examples
[[example]]
name = "electrum-integration"
path = "examples/electrum-integration.rs"

[[example]]
name = "wallet-integration"
path = "examples/wallet-integration.rs"

# Tools
[[bin]]
name = "convert-bitcoin-core-config"
path = "tools/convert-bitcoin-core-config.rs"

[[bin]]
name = "migrate-bitcoin-core"
path = "tools/migrate-bitcoin-core.rs"
required-features = ["rocksdb"]

# Patch secp256k1 to use custom fork with batch Schnorr verification
# This resolves cc crate version conflicts between iroh (requires cc >= 1.0.69 via ring)
# and miniscript's bitcoin crate (which uses secp256k1-sys requiring cc <= 1.0.41)
# By patching to our custom fork, we use a newer secp256k1-sys that's compatible with newer cc
[patch.crates-io]
secp256k1 = { git = "https://github.com/secsovereign/rust-secp256k1.git", branch = "batch-schnorr-verification" }
blvm-spec-lock = { path = "../blvm-spec-lock" }